@@ -1,3 +1,10 @@
+2004-03-31  Laurent Sansonetti  <lrz@gnome.org>
+
+	* data/alexandria/glade/main_app.glade,
+	  lib/alexandria/ui/main_app.rb:
+
+	Added 'Edit/Select All' and 'Edit/Deselect All'.
+
 2004-03-30  Laurent Sansonetti  <lrz@gnome.org>
 
 	* data/alexandria/icons/alexandria_small.png,
